tests/fixtures/invalid/pow_int_list_none.py
# Cannot call pow() with Int, List[int], None
x = pow(1, [1, 2, 3], None)
